# dtn-bp-safe

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  edhoc.cddl  eid-patterns.cddl
spec/: CMakeLists.txt  check_cbor.sh  check_cborseq.sh  dictionary.txt  draft-sipos-dtn-bp-safe.xml  spellcheck.xsl  split_artwork.py
src/: CMakeLists.txt  pyproject.toml  test_examples.py
